<resources>
    <string name="app_name">ActivityStarWapp</string>
    <string name="copyright">Powered by <b>Rodrigo Vieira</b></string>
    <string name="starwars">StarWars</string>
    <string name="tripulacao">Tripulação: </string>
    <string name="escolhalado"><b>ESCOLHER O LADO\n DA FORÇA, VOCÊ DEVE</b></string>
    <string name="escolhasabio"><b>ESCOLHA SABIAMENTE...</b></string>
    <string name="personagens"><b>Personagens</b></string>
    <string name="planetas"><b>Planetas</b></string>
    <string name="espaconaves"><b>Espaçonaves</b></string>
    <string name="aleatorio"><b>Aleatório</b></string>
    <string name="busca">Buscar</string>
    <string name="buscaitem">BUSCA ITEM</string>
    <string name="buscalista">BUSCA LISTA</string>
    <string name="buscatudo">BUSCAR TUDO</string>
    <string name="buscaunico">POR ID</string>
    <string name="idinput">Digite o Id</string>
    <string name="olho">Eye Color: %1$s</string>
    <string name="nome">Name: </string>
    <string name="populacao">População: </string>
    <string name="diametro">Diâmetro: %1$s km</string>
    <string name="km"> km</string>
    <string name="mil"> K</string>
    <string name="resultado">Resultados: </string>
    <string name="milhao"> M</string>
    <string name="passageiro">Passageiros: %1$s </string>
    <string name="aaaaa"><b>Altura: </b></string>
    <string name="avisonulo">Digite algum número</string>
    <string name="avisoforarange">Id inexistente</string>
    <string name="exemplobusca">Ex.: 1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>